# TamKL

./: CMakeLists.txt  README.md  TamKL_zh_CN.ts  main.cpp  main.qml
base/: I18n.cpp  I18n.h
